Reduced landing image, fixed overflows on cards and description

--- a/client/src/components/TaskDescription/styles.scss
+++ b/client/src/components/TaskDescription/styles.scss
@@ -24,6 +24,7 @@
       font-weight: 400;
       margin: 0;
       text-transform: uppercase;
+      overflow-wrap: anywhere;
     }
 
     &-arrow {
